--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
+    "outDir": "",
     "module": "commonjs",
     "target": "es6",
     "jsx": "react",
+    "declaration": true,
     "sourceMap": true,
     "allowJs": false,
     "noImplicitAny": true
-  }
+    },
+    "exclude": ["test"]
 }
