--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
   "name": "typler",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
-  "main": "dist/typler.js",
+  "main": "dist/main.js",
   "private": true,
   "scripts": {
     "start": "webpack-dev-server --no-info --client-log-level error",
-    "test": "mocha -r ts-node/register test/test.ts",
+    "test": "jest",
     "publish": "rm -rf dist/ && webpack"
   },
-  "types": "dist/index.d.ts",
   "author": "Vlad Sydorenko",
   "license": "ISC",
   "devDependencies": {
-    "@types/chai": "^4.0.4",
-    "@types/mocha": "^2.2.43",
-    "chai": "^4.1.2",
-    "mocha": "^4.0.1",
+    "@types/jest": "^21.1.2",
+    "jest": "^21.2.1",
+    "ts-jest": "^21.1.1",
     "ts-loader": "^2.3.7",
-    "ts-node": "^3.3.0",
     "typescript": "^2.5.3",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
+  },
+  "jest": {
+    "moduleFileExtensions": ["ts", "tsx", "js"],
+    "transform": { "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js" },
+    "testRegex": "/__tests__/.*spec\\.(ts|tsx|js)$"
   }
 }
